--- a/Project/cvWebApplication/Content/Site.css
+++ b/Project/cvWebApplication/Content/Site.css
@@ -1,24 +1,60 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+	padding-top: 15%;
+	padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+	padding-left: 15px;
+	padding-right: 15px;
 }
+.navbar-header {
+	width: 100%;
+	height: 70px;
+}
+
+.navbar-brand {
+	float: left;
+	margin-bottom: 10px;
+	margin-top:10px;
+	margin-left:15px;
+	padding:0px 0px 0px 0px;
+	height:95%;
+	
+}
+	.navbar-brand img {
+		height:100%;
+	}
+.nav {
+	position: relative;
+	margin-left: 10%;
+	padding: 0px 0px 0px 0px;
+	line-height: 20px;
+	margin-bottom:4px;
+}
+
+	.nav > ul {
+		line-height: 20px;
+		padding:0px 0px 0px 0px;
+	}
+	.nav > li >a {
+		display: block;
+		font-size: 20px;
+		margin-left:25px;
+		padding: 0px 0px 0px 0px;
+	}
+
 
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
 .dl-horizontal dt {
-    white-space: normal;
+	white-space: normal;
 }
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
 textarea {
-    max-width: 280px;
+	max-width: 280px;
 }
