--- a/Project/cvWebApplication/Views/Shared/_Layout.cshtml
+++ b/Project/cvWebApplication/Views/Shared/_Layout.cshtml
@@ -52,7 +52,7 @@
 		@RenderBody()
 		<hr style="border-color:rgb(255,135,35);"/>
 		<footer>
-			<p>&copy; @DateTime.Now.Year - Yuval Steuer</p>
+			<p style="font-size:12px;">&copy; @DateTime.Now.Year - Yuval Steuer</p>
 		</footer>
 	</div>
 
