--- a/Project/cvWebApplication/Content/Site.css
+++ b/Project/cvWebApplication/Content/Site.css
@@ -13,6 +13,7 @@
 	color: rgb(220,220,220);
 	border-color: rgb(255,135,35);
 }
+
 /* Set padding to keep content from hitting the edges */
 .body-content {
 	border-radius:7px;
@@ -21,6 +22,24 @@
 	padding-right: 15px;
 	color: rgb(205,205,205);
 }
+#join-date > button {
+	margin-left: 0px;
+	padding-left: 0px;
+	background-color: rgb(35,35,35);
+	height: 38px;
+	border-top-right-radius: 4px;
+	border-bottom-right-radius: 4px;
+	border-color: transparent;
+	border-bottom-left-radius: 0px;
+	border-top-left-radius: 0px;
+	vertical-align:auto;
+	margin-bottom:0px;
+
+}
+	#join-date > button > img {
+		margin-left: 5.75px;
+
+	}
 	.body-content > h2 {
 		color: rgb(255,135,35);
 	}
