--- a/Project/cvWebApplication/Views/Members/Create.cshtml
+++ b/Project/cvWebApplication/Views/Members/Create.cshtml
@@ -8,79 +8,147 @@
 
 <h2 style="margin-left:40px;margin-top:40px;color:rgb(255,135,35);">Create Member</h2>
 <hr style="margin-left:15px;margin-right:15px;border-style:dotted;border-color:rgb(255,135,35);" />
-<div style="border-style:outset;border-radius:8px;margin-left:15px;margin-right:15px;" class="jumbotron">
 	@using (Html.BeginForm())
 	{
 		@Html.AntiForgeryToken()
 
-		<div class="form-horizontal">
+
+	<div class="form-horizontal">
+		<div style="border-style:outset;border-radius:8px;margin-left:15px;margin-right:15px;width:auto;background-color:rgb(95,95,95);border-color:transparent;" class="jumbotron">
 			<h3></h3>
 			@Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+
+			@* Member ID*@
 			<div class="form-group">
-				@Html.LabelFor(model => model.MemberID, htmlAttributes: new { @class = "control-label col-md-2" })
+				<label class="control-label col-md-2" for="MemberID" style="color:rgb(215,215,215);">Member ID</label>
 				<div class="col-md-10">
-					@Html.EditorFor(model => model.MemberID, new { htmlAttributes = new { @class = "form-control" } })
+					<input class="form-control text-box single-line" data-val="true" data-val-number="The field MemberID must be a number." data-val-required="The MemberID field is required." id="MemberID" name="MemberID" type="number" value="" style="background-color:rgb(35,35,35);color:rgb(255,135,35);border-color:transparent;" />
 					@Html.ValidationMessageFor(model => model.MemberID, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
+			@* First Name*@
 			<div class="form-group">
-				@Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
+				<label class="control-label col-md-2" for="FirstName" style="rgb(215,215,215);">First Name</label>
 				<div class="col-md-10">
-					@Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
+					<input class="form-control text-box single-line" id="FirstName" name="FirstName" type="text" value="" style="background-color:rgb(35,35,35);color:rgb(255,135,35);border-color:transparent;" />
 					@Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
+			@* Last Name*@
 			<div class="form-group">
-				@Html.LabelFor(model => model.LastName, htmlAttributes: new { @class = "control-label col-md-2" })
+				<label class="control-label col-md-2" for="LastName" style="color:rgb(215,215,215);">Last Name</label>
 				<div class="col-md-10">
-					@Html.EditorFor(model => model.LastName, new { htmlAttributes = new { @class = "form-control" } })
+					<input class="form-control text-box single-line" id="LastName" name="LastName" type="text" value="" style="background-color:rgb(35,35,35);color:rgb(255,135,35);border-color:transparent;" />
 					@Html.ValidationMessageFor(model => model.LastName, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
+
+			@* Join Date*@
 			<div class="form-group">
-				@Html.LabelFor(model => model.JoinDate, htmlAttributes: new { @class = "control-label col-md-2" })
-				<div class="col-md-10">
-					@Html.EditorFor(model => model.JoinDate, new { htmlAttributes = new { @class = "form-control" } })
+				<label class="control-label col-md-2" for="JoinDate" style="color:rgb(215,215,215);">Join Date</label>
+				<div class="col-md-10" id="join-date">
+					<input class="form-control datepicker text-box single-line" data-val="false" data-val-date="The field 'JoinDate' must be a date." id="JoinDate" name="JoinDate" type="datetime" value="" style="width:100%;background-color:rgb(35,35,35);color:rgb(255,135,35);border-color:transparent;" />
 					@Html.ValidationMessageFor(model => model.JoinDate, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
+			@* Birth Date*@
 			<div class="form-group">
-				@Html.LabelFor(model => model.BirthDate, htmlAttributes: new { @class = "control-label col-md-2" })
+				<label class="control-label col-md-2" for="BirthDate" style="color:rgb(215,215,215);">Birth Date</label>
 				<div class="col-md-10">
-					@Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
+					<input class="form-control datepicker text-box single-line" data-val="false" data-val-date="The field BirthDate must be a date." id="BirthDate" name="BirthDate" type="datetime" value="" style="width:100%;background-color:rgb(35,35,35);color:rgb(255,135,35);border-color:transparent;" />
 					@Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
 			<div class="form-group">
-				@Html.LabelFor(model => model.PrimaryRole, htmlAttributes: new { @class = "control-label col-md-2" })
+				<label class="control-label col-md-2" for="Primary Role" style="color:rgb(215,215,215);">Primary Role</label>
 				<div class="col-md-10">
-					@Html.EditorFor(model => model.PrimaryRole, new { htmlAttributes = new { @class = "form-control" } })
+					<select class="form-control" name="SecondaryRole" type="text" id="Primary Role" style="background-color:rgb(35,35,35);color:rgb(255,135,35);border-color:transparent;">
+						<option value="None">None</option>
+						<optgroup></optgroup>
+						<option value="Software LEAD">Software Team LEAD</option>
+						<option value="Mechanics LEAD">Mechanics Team LEAD</option>
+						<option value="Electronics LEAD">Electronics Team LEAD</option>
+						<option value="Build Team LEAD">Build Team LEAD</option>
+						<option value="CAD & Design Team LEAD">CAD Team LEAD</option>
+						<option value="Design Team LEAD">Design Team LEAD</option>
+						<option value="Scouting Team LEAD">Scouting Team LEAD</option>
+						<option value="Media Team LEAD">Media Team LEAD</option>
+						<option value="Outreach Team LEAD">Outreach Team LEAD</option>
+						<optgroup></optgroup>
+						<option value="Software Team MEMBER">Software Team MEMBER</option>
+						<option value="Mechanics Team MEMBER">Mechanics Team MEMBER</option>
+						<option value="Electronics Team MEMBER">Electronics Team MEMBER</option>
+						<option value="Build Team MEMBER">Build Team MEMBER</option>
+						<option value="CAD & Design MEMBER LEAD">CAD Team MEMBER</option>
+						<option value="Design Team MEMBER">Design Team MEMBER</option>
+						<option value="Scouting Team MEMBER">Scouting Team MEMBER</option>
+						<option value="Media Team MEMBER">Media Team MEMBER</option>
+						<option value="Outreach Team MEMBER">Outreach Team MEMBER</option>
+					</select>
 					@Html.ValidationMessageFor(model => model.PrimaryRole, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
+			@* Secondary Role *@
 			<div class="form-group">
-				@Html.LabelFor(model => model.SecondaryRole, htmlAttributes: new { @class = "control-label col-md-2" })
+				<label class="control-label col-md-2" for="Secondary Role" style="color:rgb(190,190,190);">Secondary Role</label>
 				<div class="col-md-10">
-					@Html.EditorFor(model => model.SecondaryRole, new { htmlAttributes = new { @class = "form-control" } })
+					<select class="form-control" name="SecondaryRole" type="text" id="Secondary Role" style="background-color:rgb(35,35,35);color:rgb(255,135,35);border-color:transparent;">
+						<option value="None">None</option>
+						<optgroup></optgroup>
+						<option value="Software LEAD">Software Team LEAD</option>
+						<option value="Mechanics LEAD">Mechanics Team LEAD</option>
+						<option value="Electronics LEAD">Electronics Team LEAD</option>
+						<option value="Build Team LEAD">Build Team LEAD</option>
+						<option value="CAD & Design Team LEAD">CAD Team LEAD</option>
+						<option value="Design Team LEAD">Design Team LEAD</option>
+						<option value="Scouting Team LEAD">Scouting Team LEAD</option>
+						<option value="Media Team LEAD">Media Team LEAD</option>
+						<option value="Outreach Team LEAD">Outreach Team LEAD</option>
+						<optgroup></optgroup>
+						<option value="Software Team MEMBER">Software Team MEMBER</option>
+						<option value="Mechanics Team MEMBER">Mechanics Team MEMBER</option>
+						<option value="Electronics Team MEMBER">Electronics Team MEMBER</option>
+						<option value="Build Team MEMBER">Build Team MEMBER</option>
+						<option value="CAD & Design MEMBER LEAD">CAD Team MEMBER</option>
+						<option value="Design Team MEMBER">Design Team MEMBER</option>
+						<option value="Scouting Team MEMBER">Scouting Team MEMBER</option>
+						<option value="Media Team MEMBER">Media Team MEMBER</option>
+						<option value="Outreach Team MEMBER">Outreach Team MEMBER</option>
+					</select>
 					@Html.ValidationMessageFor(model => model.SecondaryRole, "", new { @class = "text-danger" })
 				</div>
 			</div>
 
+			@* Submit*@
 			<div class="form-group">
 				<div class="col-md-offset-2 col-md-10">
-					<input type="submit" value="Create" class="btn btn-default" />
+					<input type="submit" value="Create" class="btn btn-default" style="background-color:rgb(25,25,25);border-color:rgb(255,135,35);color:rgb(255,115,35);border-left-width:0px;border-right-width:0px;" />
 				</div>
 			</div>
-		</div>
-	}
 
-	<div>
-		@Html.ActionLink("Back to List", "Index")
+			<div>
+				@Html.ActionLink("Back to List", "Index")
+			</div>
+		</div>
 	</div>
-</div>
+}
+
+	<link href="~/Content/themes/jquery-ui-custom/jquery-ui.min.css" rel="stylesheet" />
+	@section Scripts {
+		<script src="~/Scripts/jquery-ui-1.12.1.min.js"></script>
+		<script>
+			$(function () {
+				$(".datepicker").datepicker({
+					dateFormat: "dd/mm/yy",
+				});
+			});
+		</script>
+		@Scripts.Render("~/bundles/jqueryval")
+	}
