--- a/Project/cvWebApplication/Views/Members/Index.cshtml
+++ b/Project/cvWebApplication/Views/Members/Index.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<cvWebApplication.Models.tblMember>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Members";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Members</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -42,10 +42,10 @@
             @Html.DisplayFor(modelItem => item.LastName)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.JoinDate)
+            @DateTime.Parse(item.JoinDate.ToString()).ToShortDateString()
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.BirthDate)
+            @DateTime.Parse(item.BirthDate.ToString()).ToShortDateString()
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.PrimaryRole)
