--- a/Project-login/cvWebApplication/cvWebApplication/Views/Shared/_Layout.cshtml
+++ b/Project-login/cvWebApplication/cvWebApplication/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 	@Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-	<div class="navbar navbar-inverse navbar-fixed-top">
+	<div class="navbar navbar-inverse navbar-fixed-top" id="navbar-complete">
 		<div class="container">
 			<div class="navbar-header">
 
@@ -35,32 +35,26 @@
 						<button id="@(ViewContext.RouteData.Values["Action"].ToString() == "Contact" ? "active-btn" : "contact-btn")" type="button" class="btn btn-toolbar" onclick="location.href='/Home/Contact'">Contact</button>
 
 					</div>
+				</ul>
+				@Html.Partial("_LoginPartial")
+			</div>
+		</div>
+		<div class="collapse navbar-collapse" id="collapsed-navbar-container">
+			<div class="collapsed-navbar">
+				<ul id="head-navbar-collapse-ul" class="nav navbar-nav navbar-left"> 
+					<li><a href="/" style="width:50%">Home</a></li>
+					<li><a href="/Home/About" style="width:50%;">About</a></li>
+					<li><a href="/Home/Contact" style="width:50%;">Contact</a></li>
+					@Html.Partial("_LoginPartialCollapse")
 
 				</ul>
-				<div class="navbar-button-group">
-					<ul class="nav navbar-nav navbar-right">
-						<div class="btn-group" role="group" aria-label="navbar-button-group">
-							<button id="login-and-register-btn" type="button" class="btn btn-toolbar" onclick="location.href='/Account/Register'" style="border-top-width:0px;" >Register</button>
-							<button id="login-and-register" type="button" class="btn btn-toolbar" onclick="location.href='/Account/Login'" style="border-top-width:0px;">Log in</button>
-						</div>
-					</ul>
-				</div>
-			</div>
-
-			<div class="collapse navbar-collapse">
-				<div class="collapsed-navbar">
-					<ul class="nav navbar-nav navbar-left">
-						<li>@Html.ActionLink("Home", "Index", "Home")</li>
-						<li>@Html.ActionLink("About", "About", "Home")</li>
-						<li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-					</ul>
-				</div>
 			</div>
 		</div>
 	</div>
+
 	<div class="container body-content">
 		@RenderBody()
-		<hr style="border-color:rgb(255,135,35);" />
+		<hr style="border-color:rgb(255,135,35);" />	
 		<footer>
 			<p style="font-size:12px;">&copy; @DateTime.Now.Year - Yuval Steuer</p>
 		</footer>
